--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,29 @@
 stages:
+  - build
   - test
 
 before_script:
   - chmod +x src/test/script/common-tests.sh
 
-test_common:
+maven_build:
+  stage: build
+  script:
+    - echo "Building the project with Maven..."
+    - mvn clean compile
+  artifacts:
+    paths:
+      - target/
+    expire_in: 1 hour
+
+maven_test:
   stage: test
   script:
-    - echo "Running tests on all branches.."
-    - ./src/test/script/common-tests.sh
+    - echo "Running common-tests.sh script..."
+    - mvn exec:exec@common-tests
+  artifacts:
+    when: on_failure
+    reports:
+      junit: target/surefire-reports/TEST-*.xml
+    paths:
+      - target/surefire-reports/
+    expire_in: 1 hour
