--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ before_script:
 
 maven_build:
   stage: build
+  image: maven:3.9.4-eclipse-temurin-11
   script:
     - echo "Building the project with Maven..."
     - mvn clean compile
