--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,29 +2,21 @@ stages:
   - build
   - test
 
-before_script:
-  - chmod +x src/test/script/common-tests.sh
-
 maven_build:
   stage: build
   image: maven:3.9.4-eclipse-temurin-11
   script:
-    - echo "Building the project with Maven..."
     - mvn clean compile
   artifacts:
     paths:
       - target/
     expire_in: 1 hour
 
-maven_test:
+common_tests:
   stage: test
+  image: maven:3.9.4-eclipse-temurin-11
+  dependencies:
+    - maven_build
   script:
-    - echo "Running common-tests.sh script..."
+    - chmod +x src/test/script/common-tests.sh
     - mvn exec:exec@common-tests
-  artifacts:
-    when: on_failure
-    reports:
-      junit: target/surefire-reports/TEST-*.xml
-    paths:
-      - target/surefire-reports/
-    expire_in: 1 hour
