--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
         <java-version>8</java-version>
         <jacoco.skip>true</jacoco.skip>
         <jacoco.report_dir>${project.build.directory}/site/jacoco</jacoco.report_dir>
@@ -92,6 +93,10 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <!-- usual plugin to compile Java code -->
