build: comment sonar use [skip ci]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - build
-  - sonarqube
   - test
 
 maven_build:
@@ -27,13 +26,13 @@ common_tests:
     paths:
       - target/surefire-reports/
 
-sonarqube-check:
-  stage: sonarqube
-  image: registry.gitlab.com/ensimag5044950/projet-gl/custom-maven-image:latest
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - .sonar/cache
-  script:
-    - mvn verify sonar:sonar -Dsonar.projectKey=Project-GL -Dsonar.login=$SONAR_TOKEN
-  allow_failure: true
+# sonarqube-check:
+#   stage: sonarqube
+#   image: registry.gitlab.com/ensimag5044950/projet-gl/custom-maven-image:latest
+#   cache:
+#     key: "${CI_JOB_NAME}"
+#     paths:
+#       - .sonar/cache
+#   script:
+#     - mvn verify sonar:sonar -Dsonar.projectKey=Project-GL -Dsonar.login=$SONAR_TOKEN
+#   allow_failure: true
