build: added removeUnusedImports and importOrder in spotless

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,8 @@
                         <eclipse>
                             <file>config/formatter/eclipse-formatter.xml</file>
                         </eclipse>
+                        <removeUnusedImports/>
+                        <importOrder/>
                     </java>
                 </configuration>
             </plugin>
