--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@ stages:
   - build
   - test
   - format-check
-  #- sonarqube # Uncomment when SonarQube is ready to be used
 
 cache:
   paths:
@@ -48,7 +47,15 @@ decac_verif_tests:
   script:
     - echo "Running decac verification tests..."
     - mvn exec:exec@decac-verif
-  
+
+verify-ima-output:
+  stage: test
+  dependencies:
+    - maven_build
+  script:
+    - echo "Running IMA output verification tests..."
+    - mvn exec:exec@verify-ima-output
+    
 spotless_check:
   stage: format-check
   script:
